# toshy

./: DEPENDENCY_ANALYSIS.md  DEVELOPMENT_PLAN.md  FLAKE_ARCHITECTURE.md  MIGRATION_GUIDE.md  MODERNIZATION_CONTEXT.md  NIXOS_MODULE_DESIGN.md  PACKAGING_ISSUES.md  PHASE1_DEPENDENCY_ANALYSIS.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_README.md  PHASE2_COMPLETION.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_README.md  PHASE3_COMPLETION.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_README.md  PHASE3_SERVICE_OPTIMIZATION.md  PHASE4_COMPLETION.md  PHASE4_FRONTEND_TESTING.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_README.md  README.md  TOSHY_NIXOS_IMPROVEMENT_PLAN.md  fix_wrapped_applications.py  flake.nix  generated_requirements.txt  import_scanner.py  nixos-flake-best-practices.md  pyproject.toml  pytest.ini  result  setup_toshy.py  test_cli_commands.sh  test_service_management.sh  toshy-nixos-flake-context.md  toshy-nixos-flake-summary.md  toshy_tray.py  updated_requirements.txt
.github/workflows/: test.yml
context/: PHASE2_CLI_ACCESSIBILITY.md  documentation-guide.md  toshy-nixos-migration-guide.md
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
examples/: advanced-nixos-config.nix  basic-nixos-config.nix  home-manager-config.nix
home-manager/: toshy.nix
modules/: toshy.nix
tests/: __init__.py  conftest.py  test_config.py  test_daemon.py  test_entry_points.py  test_gui_buttons.py  test_gui_components.py  test_gui_forms.py  test_nixos_integration.py  test_nixos_module.py  test_phase4_features.py
toshy/: __init__.py  config.py  config_generator.py  daemon.py  debug_utils.py  layout_selector.py  performance_utils.py  platform_utils.py  tray.py  tray_gtk3_fixed.py  tray_gtk4.py
toshy/common/: service_manager.py  terminal_utils.py
toshy/gui/: __main__.py  main_gtk4.py  main_tkinter.py
toshy/gui/gui/: tools_panel.py
toshy_common/: env_context.py  notification_manager.py  shared_device_context.py  terminal_utils.py
toshy_gui/: main_gtk4.py
toshy_gui/gui/: tools_panel.py
~/sources/nixos/: flake.nix
