[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toshy"
version = "24.12.1"
description = "Mac-style keybindings for Linux"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "RedBearAK", email = "redbearakgithub@gmail.com"},
]
maintainers = [
    {name = "Celes Renata", email = "celes@celestium.life"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "appdirs",
    "dbus-python",
    "evdev",
    "hyprpy",
    "i3ipc",
    "inotify-simple",
    "lockfile",
    "ordered-set",
    "pillow",
    "psutil",
    "pygobject",
    "pywayland",
    "six",
    "systemd-python",
    "watchdog",
    "python-xlib==0.31",
    "xkbcommon<1.1",
    "xwaykeyz @ git+https://github.com/RedBearAK/xwaykeyz.git@main",
]

[project.optional-dependencies]
gui = [
    "sv-ttk",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "black",
    "flake8",
    "mypy",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/celesrenata/toshy"
Repository = "https://github.com/celesrenata/toshy.git"
Issues = "https://github.com/celesrenata/toshy/issues"
Documentation = "https://github.com/celesrenata/toshy/wiki"

[project.scripts]
toshy-tray = "toshy.tray:main"
toshy-gui = "toshy.layout_selector:main"
toshy-config = "toshy.config:main"
toshy-daemon = "toshy.daemon:main"
toshy-config-generator = "toshy.config_generator:main"

[tool.setuptools]
py-modules = ["toshy_tray", "toshy_layout_selector"]

[tool.setuptools.packages.find]
where = ["."]
include = ["toshy*"]

[tool.setuptools.package-data]
toshy = [
    "assets/**/*",
    "desktop/**/*",
    "default-toshy-config/**/*",
    "systemd-user-service-units/**/*",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
